# snore

./: Cargo.toml  README.md  flake.nix  shell.nix
db.sled/: db  snap.00000000000027DC
src/: db.rs  feed.rs  main.rs
templates/: base.html.tera  index.html.tera  login.html.tera  nav.html.tera  settings.html.tera  style.css.tera
