[package]
name = "snore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
sled = "0.34.7"
feed-rs = "1.3.0"
ureq = "2.6.2"
bincode = "2.0.0-rc.3"
chrono = "0.4.24"
serde = "1.0.159"
url = "2.3.1"
rand = "0.8.5"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
